--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,7 +4,7 @@ description: Advanced Multimodal Mental Health Monitoring Framework
 show_downloads: true
 logo: assets/hero_image.png
 google_analytics: 
-#baseurl: "/Sentry" # Important for GitHub Pages
+#baseurl: "/Sentry" # Optimized for User Page functionality
 url: "https://niksheyyadav.github.io/Sentry"
 markdown: kramdown
 highlighter: rouge
